fix tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
 skip_install=True
 commands =
     pylint --rcfile {toxinidir}/.pylint {toxinidir}/src/tracboat
-    flake8 --format pylint --config {toxinidir}/.flake8 {toxinidir}/src/tracboat
+    flake8 --config {toxinidir}/.flake8 {toxinidir}/src/tracboat
 
 [testenv:codecov]
 # Codecov CI
@@ -36,14 +36,14 @@ deps =
     codecov>=1.4.0
     {[testenv]deps}
 commands =
-    {[testenv]commands_coverage}
+    {[testenv:coverage]commands}
     codecov -e TOXENV
 
 [travis]
 # Section used by tox-travis, run only the py-version
 # that matches the current Travis test run
 python =
-    2.7: py27, lint, docs, codecov
+    2.7: py27, lint, codecov
     3.4: py34
     3.5: py35
     3.6: py36
