--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,34,35,36}-test
+envlist = py{27,34,35,36}-test,lint
 skip_missing_interpreters = True
 
 [testenv]
@@ -9,7 +9,7 @@ changedir = {envdir}
 deps = -r{toxinidir}/requirements-dev.txt
 commands =
     pytest --basetemp {envtmpdir} {posargs} {toxinidir}/tests
-    pytest --basetemp {envtmpdir} --doctest-modules {posargs} {toxinidir}/src/tracboat
+    # pytest --basetemp {envtmpdir} --doctest-modules {posargs} {toxinidir}/src/tracboat
 
 [testenv:coverage]
 # coverage: run coverage tests and produce coverage reports.
