--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,19 +2,26 @@ appdirs==1.4.3
 astroid==1.4.9
 backports.functools-lru-cache==1.3
 bumpversion==0.5.3
+click==6.7
 configparser==3.5.0
 coverage==4.3.4
 enum34==1.1.6
 flake8==3.3.0
+funcsigs==1.0.2
 isort==4.2.5
 lazy-object-proxy==1.2.2
 mccabe==0.6.1
+mock==2.0.0
 packaging==16.8
+pbr==2.1.0
+peewee==2.9.1
 pluggy==0.4.0
+psycopg2==2.7.1
 py==1.4.33
 pycodestyle==2.3.1
 pyflakes==1.5.0
 pylint==1.6.5
+pymongo==3.4.0
 pyparsing==2.2.0
 pytest==3.0.7
 pytest-catchlog==1.2.2
@@ -22,14 +29,11 @@ pytest-cov==2.4.0
 pytest-sugar==0.8.0
 six==1.10.0
 termcolor==1.1.0
+toml==0.9.2
 tox==2.7.0
+tox-travis==0.8
 virtualenv==15.1.0
 wrapt==1.10.10
-
-# The following stuff is needed just to check wether the README.rst
-# would be correctly rendered by PyPI (via rst2html.py)
-pygments==2.2.0
-docutils==0.13.1
 
 # Pull in dist dependencies
 -r requirements.txt
