manage requirements with pip-tools

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skip_missing_interpreters = True
 # testenv: default tox environment. Run the whole test suite
 #          along with source doctests.
 changedir = {envdir}
-deps = -r{toxinidir}/requirements-dev.txt
+deps = -r{toxinidir}/requirements/develop.txt
 commands =
     pytest --basetemp {envtmpdir} {posargs} {toxinidir}/tests
     # pytest --basetemp {envtmpdir} --doctest-modules {posargs} {toxinidir}/src/tracboat
@@ -23,7 +23,9 @@ commands =
 # lint: run linting checks on the code base.
 skip_install=True
 commands =
-    # Disable temporarily some errors
+    # Temporarily disable:
+    # - TODOs
+    # - Missing docstrings
     pylint --rcfile {toxinidir}/.pylint --disable=fixme,missing-docstring {toxinidir}/src/tracboat
     flake8 --config {toxinidir}/.flake8 {toxinidir}/src/tracboat
 
