--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,22 @@ toml = "*"
 pymongo = "*"
 
 [dev-packages]
+tox = "*"
+flake8 = "*"
+# pylint 1.7.0 is completely screwed up, keeps crashing
+pylint = "==1.6.5"
+pytest = "*"
+pytest-catchlog = "*"
+pytest-cov = "*"
+pytest-sugar = "*"
+bumpversion = "*"
+pip-tools = "*"
+mock = "*"
+
+# The following stuff is needed to 'python setup.py check'
+# the README.rst rendering in PyPI
+docutils = "*"
+Pygments = "*"
 
 [requires]
 python_version = "2.7"
